# curlinator

./: curlinator.cabal
src/: Class.hs  CurlWriter.hs  HttpClient.hs  Main.hs  Types.hs
